--- a/i3/config
+++ b/i3/config
@@ -147,7 +147,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
-#	position top
+	position top
 }
 
 for_window [class="Chromium"] border 1pixel
